@@ -1,3 +1,4 @@
+1969 [Main Window] if video input avs file has also audio included add this file as audio track, too. Feature request #2918470
 1968 [MKV Muxer] added forced track flag for subtitles
 1967 [Update] save/restore size, location and column locations. Feature request #3079391
 1966 [Worker] corrected wiki link. Patch by XhmikosR (#3186982)
